# netauto

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  TESTING.md  TODO.md  USAGE.md  pyproject.toml
docs/: evpn_service.md  flows.md  intf.xml  lag.xml
examples/: demo_evpn.py  demo_lag.py  demo_real_devices.py  evpn_circuit.py  lag_demo.py  prefect_evpn.py  prefect_lag.py
scripts/: generate_evpn_validation.py  inspect_evpn.py  live_evpn_test.py  parse_arista_configs.py  parse_ocns_configs.py
src/netauto/: __init__.py  allocation.py  drivers.py  evpn.py  exceptions.py  logic.py  models.py  ocnos_xml.py  renderer.py
tests/: __init__.py  ocnos_interfaces.xml  ocnos_vxlan.xml  test_allocation.py  test_drivers.py  test_ensure_reconcile.py  test_evpn_manager.py  test_evpn_readback.py  test_evpn_validation_matrix.py  test_interface_manager.py  test_lag_manager.py  test_live_devices.py  test_models.py  test_ocnos_xml.py  test_real_drivers_syntax.py  test_render_arista.py  test_render_ocnos.py  test_renderer.py
validation_output/: SUMMARY.md
validation_output/azure__cust-arista_cni-arista/: 1_customer__arista.cfg  1_customer__arista.delete.cfg  2_cni__arista.cfg  2_cni__arista.delete.cfg  README.md
validation_output/azure__cust-arista_cni-ocnos/: 1_customer__arista.cfg  1_customer__arista.delete.cfg  2_cni__ocnos.delete.xml  2_cni__ocnos.xml  README.md
validation_output/azure__cust-ocnos_cni-ocnos/: 1_customer__ocnos.delete.xml  1_customer__ocnos.xml  2_cni__ocnos.delete.xml  2_cni__ocnos.xml  README.md
validation_output/azure__rewrite_cni-arista/: README.md  (+4 more)
(+68 files in other folders)
